fix: add margin for last column border visibility in ScrapeTable

--- a/docs/.vitepress/theme/styles/style.scss
+++ b/docs/.vitepress/theme/styles/style.scss
@@ -1460,6 +1460,7 @@ table tr:nth-child(odd) {
   width: max-content;
   overflow: visible !important;
   margin: 0 !important;
+  margin-right: 1px !important;
 
   .col-cell { width: 34px; }
 
